feat(composer,github) - update symfony version and add github actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.7'
 services:
   php-fpm:
-    ports: [ '8122:80' ]
     working_dir: /app
     depends_on:
+      - redis
       - postgres
     build:
       context: .
@@ -17,15 +17,62 @@ services:
       - ./public:/app/public:consistent
       - ./src:/app/src:consistent
       - ./var:/app/var:consistent
-      - ${HOME}/.config/gcloud:/root/.config/gcloud:cached
+      - ${HOME}/.config/gcloud/application_default_credentials.json:/tmp/application_default_credentials.json
+  messenger:
+    profiles: [ "messenger" ]
+    working_dir: /app
+    depends_on:
+      - php-fpm
+    build:
+      context: .
+      target: php_dev
+      dockerfile: Dockerfile
+    #    entrypoint: php /app/bin/console messenger:consume async --time-limit=3600
+    volumes:
+      - .:/app
+      - ./bin:/app/bin:consistent
+      - ./config:/app/config:consistent
+      - ./public:/app/public:consistent
+      - ./src:/app/src:consistent
+      - ./var:/app/var:consistent
   postgres:
-    image: bitnami/postgresql:12
+    image: postgres:${POSTGRES_VERSION:-15}-alpine
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
       ALLOW_EMPTY_PASSWORD: 'yes'
     volumes:
-      - ./.data/postgres:/var/lib/postgresql/data
+      - ./.data/postgres:/var/lib/postgresql/data:rw
+  redis:
+    image: "redis:alpine"
+    command: redis-server
+    environment:
+      - REDIS_REPLICATION_MODE=master
+  pgadmin:
+    profiles: [ "pgadmin" ]
+    image: bitnami/phppgadmin
+    environment:
+      DATABASE_HOST: postgres
+    depends_on:
+      - postgres
+  nodejs:
+    profiles: [ "quality" ]
+    working_dir: /app
+    build:
+      dockerfile: .docker/nodejs/Dockerfile
+      context: .
+    command: ["tail", "-F", "no-file"]
+    volumes:
+      - .:/app:cached
+  hugo:
+    profiles: [ "doc" ]
+    image: klakegg/hugo:0.92.1
+    command: server
+    volumes:
+      - "./docapi:/src"
+    ports:
+      - "1313:1313"
   phpstan:
+    profiles: [ "quality" ]
     build:
       dockerfile: .docker/phpstan/Dockerfile
       context: .
@@ -38,6 +85,7 @@ services:
       - ./var:/app/var:consistent
       - ${HOME}/.config/gcloud:/root/.config/gcloud:cached
   phpcs:
+    profiles: [ "quality" ]
     build:
       dockerfile: .docker/phpcs/Dockerfile
       context: .
